# stub

./: .travis.yml  CMakeLists.txt  NEWS.rst  README.rst  buildbot.py  config.py  giit.json  index.html  waf  wscript
.github/workflows/: build.yml  cxx_mkspecs.yml  linux_mkspecs.yml  macos_mkspecs.yml  nodebug.yml  raspberry_pi.yml  valgrind.yml  windows_mkspecs.yml
6.3.0/: .buildinfo  api.html  objects.inv  usage.html  versjon.json
6.3.0/.doctrees/: environment.pickle  usage.doctree  wurfapi_api.json
6.3.0/_sources/: index.rst.txt
6.3.0/api/: expectation.html  function.html
css/: landing-page.css
docs/: Makefile  api.rst  conf.py  index.rst  requirements.in  requirements.txt  usage.rst
docs/api/: expectation.rst  function.rst  return_handler.rst
docs/latest/: .buildinfo  api.html  genindex.html  index.html  search.html  searchindex.js
docs/user_api/: compare.rst  compare_call.rst  function.rst  ignore.rst  not_nullptr.rst  return_handler.rst  user_api.rst
landing_page/: generate.py  requirements.txt
landing_page/templates/: index.html
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  versjon.json
master/.doctrees/: api.doctree  environment.pickle  index.doctree  usage.doctree  wurfapi_api.json
master/_sources/: index.rst.txt  usage.rst.txt
master/_static/: guzzle.css
master/api/: expectation.html  function.html  return_handler.html
src/stub/: arguments.hpp  call.hpp  compare.hpp  compare_argument.hpp  compare_arguments.hpp  compare_call.hpp  expect_arguments.hpp  expect_calls.hpp  function.hpp  ignore.hpp  make_compare.hpp  not_null.hpp  not_nullptr.hpp  print_argument.hpp  print_arguments.hpp  print_tuple.hpp  return_handler.hpp  some.cpp  some.hpp  steinwurf_version.hpp  unqualified_type.hpp  version.hpp  wscript_build
test/: stub_tests.cpp  wscript_build
test/src/: test_arguments.cpp  test_call.cpp  test_compare.cpp  test_compare_argument.cpp  test_compare_arguments.cpp  test_compare_call.cpp  test_expect_arguments.cpp  test_function.cpp  test_ignore.cpp  test_make_compare.cpp  test_not_null.cpp  test_not_nullptr.cpp  test_print_argument.cpp  test_print_arguments.cpp  test_print_tuple.cpp  test_readme.cpp  test_return_handler.cpp  test_some.cpp  test_steinwurf_version.cpp  test_unqualified_type.cpp  test_version.cpp
update-docs/: .buildinfo  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html  versjon.json
update-docs/.doctrees/: api.doctree  environment.pickle  index.doctree  wurfapi_api.json
(+60 files in other folders)
